--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -11,6 +11,7 @@
   </parent>
   <artifactId>demo</artifactId>
   <name>demo</name>
+  <version>1.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <dependencies>
